--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,6 +9,10 @@
   <strong>Body:</strong>
   <%= @post.body %>
 </p>
+<p>
+  <strong>Date:</strong>
+  <%= @post.created_at.to_date %>
+</p>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
